Song of Solomon fallback, Message display for faulty spellings/unaccessibilites, mobile overflow/visibility issues, favicon theme auto

--- a/passage.css
+++ b/passage.css
@@ -31,6 +31,13 @@ html, body {
     column-gap: 10px;
 }
 
+.messageDisplay {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .outerwrap .biblecontainer {
     grid-area: reg;
     position: relative;
@@ -398,13 +405,10 @@ versenumber.narrative {
 .sidebarinner {
     margin: 80px 0 0 0;
     height: min-content;
-
     display: grid;
-
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-auto-flow: row;
-
     transition: inherit;
 }
 
@@ -467,14 +471,28 @@ versenumber.narrative {
     biblebook {
         line-height: 245px;
         font-size: 58px;
+
+        left: 50%;
+        max-width: 320px;
+
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     biblechapterverse {
         top: 130px;
         font-size: 25px;
     }
+
+    .sidebarinner {
+        transition: none;
+    }
+    .sidebar.hidden > .sidebarinner {
+        visibility: hidden;
+    }
     .sidebar.hidden {
         z-index: 1000;
-        left: -200px;
+        left: -120px;
+        visibility: hidden;
     }
 
     .searchqueryswrap.shown {
@@ -516,9 +534,10 @@ versenumber.narrative {
     }
     .absoluteIcon.hidden.sticky, .absoluteIcon.hidden {
         z-index: 1000;
+        visibility: visible;
         top: 20px;
         left: 15px;
-        background-color:rgb(218, 218, 218);
+        background-color:rgb(247, 247, 247);
         width: 40px;
         border-radius: 12px;
     }
